[gd_scene load_steps=9 format=3 uid="uid://ba7pvjv2uds6v"]

[ext_resource type="Texture2D" uid="uid://cvffuqcmpot6t" path="res://Img/Game mode.png" id="1_1bhu8"]
[ext_resource type="Script" path="res://GameModeScene.gd" id="1_6j284"]
[ext_resource type="Texture2D" uid="uid://ea1xpa5ifxct" path="res://Img/Back Button.png" id="2_i2raf"]
[ext_resource type="Texture2D" uid="uid://cb4hsgw1dwibx" path="res://Img/Back Button Pressed.png" id="4_omdyq"]
[ext_resource type="Texture2D" uid="uid://b747gi2jsffd5" path="res://Img/Random Button.png" id="5_2gpwq"]
[ext_resource type="Texture2D" uid="uid://1trrxap7wweb" path="res://Img/Random Button Pressed.png" id="6_ud65q"]
[ext_resource type="Texture2D" uid="uid://bw5xnewbt71uu" path="res://Img/Melody Button.png" id="7_fqnjk"]
[ext_resource type="Texture2D" uid="uid://dhr1cim08yxsy" path="res://Img/Melody Button Pressed.png" id="8_7rd03"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_6j284")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(297, 301)
scale = Vector2(0.579102, 0.585938)
texture = ExtResource("1_1bhu8")

[node name="Back Button" type="TextureButton" parent="Sprite2D"]
offset_left = -509.409
offset_top = -518.826
offset_right = -357.409
offset_bottom = -363.826
texture_normal = ExtResource("2_i2raf")
texture_hover = ExtResource("4_omdyq")
ignore_texture_size = true
stretch_mode = 3
flip_v = true

[node name="Random button" type="TextureButton" parent="Sprite2D"]
offset_left = -338.455
offset_top = -192.853
offset_right = -36.4551
offset_bottom = 121.147
texture_normal = ExtResource("5_2gpwq")
texture_hover = ExtResource("6_ud65q")
ignore_texture_size = true
stretch_mode = 3

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 306.0
offset_top = 180.0
offset_right = 500.0
offset_bottom = 373.0
texture_normal = ExtResource("7_fqnjk")
texture_hover = ExtResource("8_7rd03")
ignore_texture_size = true
stretch_mode = 3

[connection signal="pressed" from="Sprite2D/Back Button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Sprite2D/Random button" to="." method="_on_random_button_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
